Update Simulation of AES S-Box (C1).ipynb

--- a/Simulation of AES S-Box (C1).ipynb
+++ b/Simulation of AES S-Box (C1).ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "# Simulation of AES S-Box\n",
-    "Student:Sukhsagar \n",
+    "Author:Sukhsagar Dubey\n",
     "\n",
     "Advisor: Dr. Utsav Banerjee\n",
     "\n",
